Levitation import of page 2324 rev 7628.

--- a/0-/GSoC:2007/Generated IPC.mediawiki
+++ b/0-/GSoC:2007/Generated IPC.mediawiki
@@ -1,7 +1,7 @@
 {{GSoCProject
 |student=[[User:tcoppi|Thomas Coppi]]
 |mentor=[[User:Anders Gustafsson|Anders Gustafsson]]
-|cmilestone=[[Summer of Code 2007/Generated IPC/Server | Server-side Discussion]]
+|cmilestone=[[Summer of Code 2007/Generated IPC/Autogen | Autogeneration Script(s)]]
 |nmilestone=[[Summer of Code 2007/Generated IPC/Milestones | Milestones]]
 
 |description=
