/* Media String Format */
Levitation import of page 2332 rev 7634.

--- a/0-/New korving CLI.mediawiki
+++ b/0-/New korving CLI.mediawiki
@@ -335,12 +335,12 @@ The old cli takes some string like "${artist} - ${title}" which assumes that art
 The conditional structure takes a simplified condition, which is simply checked to not be an empty string. If the contents of the condition block are not an empty string, the true case is evaluated, otherwise, the false case. Conditional structures should be nestable.
 
 ;Mediainfo access:
- %[<property>]
+ %{<property>}
 
 The mediainfo access structure is simply replaced with a string representation of the property which it represents, or an empty string if the property does not exist.
 
 Thus, the statement:
- %?(%[this_property_does_not_exist])(True)(False)
+ %?(%{this_property_does_not_exist})(True)(False)
 would always print False. While the statement:
  %?(this is some text, so this is not an empty string)(True)(False)
 would always print True.
@@ -348,6 +348,6 @@ would always print True.
 Parsing and executing this format is dead simple. The change to % characters is to help command-line interpretation so that the shell does not try to substitute ${}-values. Three special characters should be included as escape sequences, %%, %(, and %).
 
 A good default string for XMMS2 would look like:
- %?(%[title])(%?(%[artist])(%[artist])() - %[title])(%[url])%?(%[channel])( %[channel])()
+ %?(%{title})(%?(%{artist})(%{artist})() - %{title})(%{url})%?(%{channel})( [%{channel}])()
 
 [[Category:Developer ideas]]
