--- a/0-/Client:Esperanza/Roadmap.mediawiki
+++ b/0-/Client:Esperanza/Roadmap.mediawiki
@@ -45,3 +45,4 @@ This page tries to collect the future of Esperanza. Please put new ideas in the 
 * preferences dialog for direct access to xmms2d settings (for advanced users)
 * Add QScript support for customization of playlist and other elements.
 * let the user set the time the systray informations about songchange should appear, e.g. -1 No Popup, 0 => infinite, 1sec .... 5min (just change the existing setting (enable/disable)).
+* Add a class that can query amazon web services for album art. It should be done on the albums that are in the playlist (and don't have a cover) and should be added to xmms2d with the binary_get/set calls.
