--- a/0-/XMMS2 Coding Style.mediawiki
+++ b/0-/XMMS2 Coding Style.mediawiki
@@ -22,6 +22,15 @@ NOT:
 
 (see [[Emacs C style]] adapted from LDP)
 
+== Arguments ==
+Arguments to code constructs and functions should always have a space between the construct or function name and the open parenthesis:
+
+ call_foo (arg1, arg2);
+
+NOT:
+
+ call_foo(arg1, arg2);
+
 == Breaking long lines and strings ==
 * Lines should not be longer than 80 characters (columns) long. (Note that this assumes 4-character long tab widths for indents)
 * "Statements longer than 80 columns will be broken into sensible chunks. Descendants are always substantially shorter than the parent and are placed substantially to the right. The same applies to function headers with a long argument list. Long strings are as well broken into shorter strings." [http://lxr.linux.no/source/Documentation/CodingStyle#L57]
