--- a/0-/New korving CLI.mediawiki
+++ b/0-/New korving CLI.mediawiki
@@ -350,4 +350,14 @@ Parsing and executing this format is dead simple. The change to % characters is 
 A good default string for XMMS2 would look like:
  %?(%{title})(%?(%{artist})(%{artist} - )()%{title})(%{url})%?(%{channel})( [%{channel}])()
 
+For a little added convenience and to introduce 100 new bugs, shorthand forms could be introduced:
+ %?(<condition>)(%{<true case>})
+by just knocking off the false condition, or even shorter:
+ %?(<condition/true case>)
+by assuming the condition and true case are the same.
+
+Negations could be fun in this sense, too:
+ %?(%{^<property>})(<false case>)
+and could potentially eliminate the need for nesting.
+
 [[Category:Developer ideas]]
