--- a/0-/GSoC:2007/Service Clients.mediawiki
+++ b/0-/GSoC:2007/Service Clients.mediawiki
@@ -1,7 +1,7 @@
 {{GSoCProject
 |student=[[User:zeegeek|Ning Shi]]
 |mentor=[[S%C3%A9bastien_Cevey|SÃ©bastien Cevey]]
-|cmilestone=Solve configuration issues
+|cmilestone=Solve auto-startup issues
 |nmilestone=Midterm evaluation
 
 |description=
