Levitation import of page 2368 rev 7658.

--- a/0-/Client:Blastwave.mediawiki
+++ b/0-/Client:Blastwave.mediawiki
@@ -1,4 +1,4 @@
-{{Client| name=Blastwave| author=[[Maciej Podkomorzy]]| website=http://sourceforge.net/projects/blastwave | version=0.1 (drJekyll compatible)| devlanguage=C| ui=GTK2| screenshots=[http://www.satfilm.net.pl/~gammaray/blastwave/screenshots/sample.png] | description=Blastwave (name to change soon) is an in-development client for XMMS2 written in C/GTK2. In its current state it features basic XMMS2 control: playlist managing, playback queues (experimental), playback control, MediaLib queries as well as a usable GTK2 interface with tray icon support. Note: the client is work in progress and is currently alpha-stage, so expect odd behaviour:)}}
+{{Client| name=Blastwave| author=[[Maciej Podkomorzy]]| website=http://sourceforge.net/projects/blastwave | version=0.1 (drJekyll compatible)| devlanguage=C| ui=GTK2| screenshots=[http://sourceforge.net/project/screenshots.php?group_id=198210] | description=Blastwave (name to change soon) is an in-development client for XMMS2 written in C/GTK2. In its current state it features basic XMMS2 control: playlist managing, playback queues (experimental), playback control, MediaLib queries as well as a usable GTK2 interface with tray icon support. Note: the client is work in progress and is currently alpha-stage, so expect odd behaviour:)}}
 
 == Download ==
 You can download the code from the sourceforge.net SVN repository:
