--- a/0-/Media Player Interfaces.mediawiki
+++ b/0-/Media Player Interfaces.mediawiki
@@ -160,10 +160,8 @@ The '''interface''' name of the player '''must''' always be "org.freedesktop.Med
 
 All methods must be accessed through the interface org.freedesktop.MediaPlayer
 
-i.e. calling Quit with qdbus would be:
- $ qdbus org.freedesktop.MediaPlayer /Player org.freedesktop.MediaPlayer.Quit
-
-
+i.e. calling Quit with qdbus on VLC would be:
+ $ qdbus org.mpris.vlc /Player org.freedesktop.MediaPlayer.Quit
 
 == The ''Basic'' interface, ( BMPx/VLC version ) ==
 
