--- a/0-/Media Player Interfaces.mediawiki
+++ b/0-/Media Player Interfaces.mediawiki
@@ -142,7 +142,7 @@ Notes:
 
 === DBus Stuff ===
 
-Each player can request an own bus name as it likes, except that the prefix must be "org.mpris". For example:
+Each player can request an own bus name as it likes, except that the prefix must be "org.mpris" and that the suffix mus not contain the '.' character. For example:
 
 * org.mpris.vlc
 * org.mpris.bmp
