/* [http://git.xmms.se/?p=esperanza.git;a=shortlog;h=0.4 Version 0.4] */
Levitation import of page 2364 rev 7663.

--- a/0-/Client:Esperanza/Roadmap.mediawiki
+++ b/0-/Client:Esperanza/Roadmap.mediawiki
@@ -2,8 +2,10 @@ This page tries to collect the future of Esperanza. Please put new ideas in the 
 
 == [http://git.xmms.se/?p=esperanza.git;a=shortlog;h=0.4 Version 0.4] ==
 * &#10003; A shortcut to go to mini-mode. Because now you have to click on the icon to do that.
-* &#10063; First time Wizard - A wizard that pops up the first time a user starts esperanza. It should handle some basic configuration of Esperanza and the server. Importing musicfiles, setting the unix path, asking if the user wants to see the server browser all times, if the colors are good (ignore desktop aware...) on linux. and so on.
+* &#10003; First time Wizard - A wizard that pops up the first time a user starts esperanza. It should handle some basic configuration of Esperanza and the server. Importing musicfiles, setting the unix path, asking if the user wants to see the server browser all times, if the colors are good (ignore desktop aware...) on linux. and so on.
 ** &#10003; add a skip wizard button? (done in esperanza-ephraim.git ([http://git.xmms.se/?p=esperanza-ephraim.git;a=commit;h=9c6a9b4852de0b790fe22ab38364500505f71ea7 part1]))
+** &#10063; show a progress while trying to connect to xmms2d
+** &#10063; show connect result not as a popup
 * &#10063; Rewrite playerwidget.cpp. This file is huge and does a lot of strange stuff. It should be split in smaller parts:
 ** &#10003; Shortcut handling should be splitted out and use QShortcut instead. (done in esperanza-ephraim.git ([http://git.xmms.se/?p=esperanza-ephraim.git;a=commit;h=9a400e38b5eb6065fbda405d11da01814389bee6 Part1], [http://git.xmms.se/?p=esperanza-ephraim.git;a=commit;h=b9076d772492eae65984e7c8897141c3ce6519bc Part2], [http://git.xmms.se/?p=esperanza-ephraim.git;a=commit;h=9ae5a266e836b64e721c292eeaf03f12660e815e Part3]))
 ** &#10003; Less direct access to the dialogs / other widgets. Rewrite to use more signals
@@ -14,7 +16,7 @@ This page tries to collect the future of Esperanza. Please put new ideas in the 
 *** &#10063; make serverbrowser and firsttimewizard another type of dialog plugin that can be accessed in some other way. First we need to define that interface then write the small code needed.
 *** &#10063; convert growl, systemtray, globalshortcut to plugins that doesn't have to be tied into the ui code. same here, define the interface and then write the code
 *** &#10063; playlist buttons doesn't work
-*** &#10063; shortcuts from dialogs doesn't work
+*** &#10003; shortcuts from dialogs work (done in esperanza-ephraim.git ([http://git.xmms.se/?p=esperanza-ephraim.git;a=commit;h=cbf033e0dab2450681a1bcf27b24436a88ed6f21 part1]))
 * &#10063; Split preferences dialog into preference manager / dialog.
 ** &#10003; Write the manager
 ** &#10063; Write the dialog
