/* More Complicated Collection Queries */
Levitation import of page 2058 rev 7667.

--- a/0-/Collections usage with cli.mediawiki
+++ b/0-/Collections usage with cli.mediawiki
@@ -82,6 +82,21 @@ so it is not possible to save one of our dynamic collection structures
 
 = More Complicated Collection Queries =
 
+It is possible to create far more complicated collections.  Note that the values return by an "mlib search" call are the same values that will go into a collection using that query with a "coll save" call.
+
+* xmms2 mlib search "artist:Mr. Scruff" OR "artist:Mr. Crispy"
+** Finds all songs with either artist; similarily for AND and NOT.
+* xmms2 mlib search artist:'*a*' AND title:'*b*'
+** Finds all songs where the artist has "a" in the name, and the song title has "b"; this is case sensitive.
+* xmms2 mlib search artist~a AND title~b
+** Same thing, but case insensitive.
+* xmms2 mlib search +rating
+** All songs that have any value at all in the "rating" property.
+* xmms2 mlib search 'rating<=5'
+** All songs that have a rating less than or equal to 5, and similarily for >=, <, and >.
+* xmms mlib search in:test1
+** All songs in the collection test1
+
 = Rename a collection =
 
 In case you want to rename a collection saved on the server, you can
